--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=styleHub
 spring.datasource.url=jdbc:mysql://localhost:3306/portal?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=admin
 spring.datasource.password=password
